# litentry-runtime-archived

./: .gitignore  Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: erc721.rs  lib.rs  litentry.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
